# sessionwiki

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ko.md  README.md  SECURITY.md
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: banner.html
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: recall.md
plugin/hooks/: hooks.json
plugin/skills/session-recall/: SKILL.md
scripts/: demo_data.py  install.ps1  install.sh  make_banner.cjs  make_banner.sh  make_demo_gif.py  make_web_demo.sh  make_web_gif.py  record_web_demo.cjs  zoom_web_demo.py
src/: blame.rs  commands.rs  hook.rs  index.rs  lib.rs  main.rs  migrate.rs  model.rs  resume.rs  util.rs  web.rs  webui.html
src/adapters/: aider.rs  claude_code.rs  cline.rs  codex.rs  continue_dev.rs  gajae.rs  gemini.rs  gptme.rs  harness.rs  mod.rs  opencode.rs
tests/: blame_cmd.rs  blame_git.rs  blame_index.rs  curation.rs  hook_cmd.rs  hook_index.rs  json_output.rs  parse.rs  resume_errors.rs  schema.rs  sync_guard.rs
tests/fixtures/aider/myrepo/: .aider.chat.history.md
tests/fixtures/claude-code/proj-a/: 0a000000-0000-4000-8000-000000000001.jsonl
tests/fixtures/claude-code/proj-a/0a000000-0000-4000-8000-000000000001/subagents/: agent-deadbeef.jsonl
tests/fixtures/cline/tasks/1749477660000/: api_conversation_history.json  ui_messages.json
tests/fixtures/codex/: rollout-2026-06-11T13-00-00-019eb9b2-1466-7e93-8b85-5b596295e96b.jsonl
tests/fixtures/continue/sessions/: 5f1d2c9a-8b34-4e21-9d6e-7a0c1b2e3f44.json  sessions.json
tests/fixtures/gajae-code/--home--dev--proj--/: 2025-12-09T00-53-29-825Z_ffae836b-9420-4060-ac13-7745215f90ff.jsonl
tests/fixtures/gemini/myproject/chats/: session-2026-06-08T10-00-abcd1234.json
tests/fixtures/gptme/fix-cors-bug-20260608-abcd/: conversation.jsonl
tests/fixtures/opencode/storage/message/ses_aaa/: msg_001.json  msg_002.json
tests/fixtures/opencode/storage/part/msg_001/: prt_001.json
tests/fixtures/opencode/storage/part/msg_002/: prt_001.json  prt_002.json  prt_003.json  prt_004.json
tests/fixtures/opencode/storage/session/proj1/: ses_aaa.json
