[package]
name = "sessionwiki"
version = "0.15.0"
edition = "2021"
description = "Find, search, and read every AI coding session you've ever had - across Claude Code, Codex, Gemini CLI, OpenCode, Cline, and more."
license = "MIT"
repository = "https://github.com/youdie006/sessionwiki"
keywords = ["claude-code", "codex", "gemini-cli", "sessions", "search"]
categories = ["command-line-utilities"]
# Keep the published crate lean: the README demo media and banner-build tooling
# are only for the GitHub page, not needed to build or use the crate.
exclude = [
    "docs/*.webp",
    "docs/*.mp4",
    "docs/banner*.png",
    "docs/banner.html",
    "docs/social-preview.png",
    "scripts/make_banner.*",
    ".playwright-mcp",
]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tiny_http = "0.12"
walkdir = "2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
dirs = "5"
unicode-normalization = "0.1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
